<resources>
    <string name="app_name" translatable="false">AFOL Guide</string>

    <string name="tab_title_my">"Favourite sets "</string>
    <string name="tab_title_search">Search Set</string>
    <string name="tab_sets_search">Sets catalogue</string>
    <string name="tab_bricks_search">Bricks catalogue</string>
    <string name="tab_title_search_part">Search Part</string>

    <string name="lego_image_desc">LEGO® image</string>
    <string name="number_text">No.</string>
    <string name="name_set_card_view">Name</string>
    <string name="release_year_card_view_text">Release year</string>
    <string name="pieces_cardView_title">Pieces</string>

    <string name="search_lego_set_hint_edit_text">Search LEGO® set</string>
    <string name="lego_image">LEGO® Image</string>

    <string name="quantity_title_text">Quantity</string>
    <string name="color_title_text">Color</string>
    <string name="brick_image_desc">brick image</string>
    <string name="different_bricks_text">Different bricks:</string>

    <string name="lego_image_transition">LEGO® set image</string>
    <string name="brick_title">Brick</string>
    <string name="moc_image_desc">moc image</string>
    <string name="parts_text">Parts</string>
    <string name="designer_text">Designer</string>
    <string name="mocs_based_on_text">Alternatives builds based on</string>

    <string name="search_lego_part_text">Search LEGO® parts</string>
    <string name="default_text_for_user">In this section, after filling text field with proper tags, you will be able to see your search results.</string>
    <string name="default_my_sets_for_user">In this section, you will be able to see your favorite LEGO® sets. You can add set to `Favorite` by clicking proper button in `LEGO® set\'s Details` or heart icon in list of searched sets.</string>
    <string name="information_image">information image</string>
    <string name="deleted_item_snack_bar_text">deleted from Favourites</string>
    <string name="added_to_favorites_snack_bar_text">added to Favourites</string>
    <string name="author">by Adam Czajkowski</string>
    <string name="rebrickable_button_text">rebrickable</string>
    <string name="instruction_button_text">instruction</string>
    <string name="parts_list_button_text">Parts list</string>
    <string name="parts_list_title_prefix">"Parts list of "</string>
    <string name="details_favorite_text_add">Add to Favourites</string>
    <string name="details_favorite_text_remove">Remove from favourites</string>
    <string name="version">Version:</string>
    <string name="author_title">Author:</string>
    <string name="author_value" translatable="false">Adam Czajkowski</string>
    <string name="contact_title">Contact</string>
    <string name="author_email" translatable="false">adam.czajkowski8@gmail.com</string>
    <string name="info_title">Info</string>
    <string name="bricklink">bricklink</string>
    <string name="spare_part_label_text">spare part</string>
    <string name="no_connection">No internet connection</string>
    <string name="default_text_for_no_connection">No internet connection,\n please check your device\'s settings.</string>
    <string name="no_result_text">0 results,\n please specify the search term more precisely.</string>
    <string name="instruction_by_rebrickable">All information are downloading from Rebrickable.com</string>
    <string name="instruction_text_2">Search phrases must be in English</string>
    <string name="terms">LEGO® is a trademark of the LEGO® Group of companies which does not sponsor, authorize or endorse this app.</string>

    <string name="my_sets_counter">%1$s Sets - %2$s bricks</string>

    <string name="label_desire">desire</string>
    <string name="label_assembled">assembled</string>
    <string name="label_unassembled">unassembled</string>
    <string name="label_owned">owned</string>
    <string name="label_incomplete">incomplete</string>
    <string name="label_complete">complete</string>
    <string name="select_labels">Select labels:</string>
</resources>
