<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_8dp"
    android:background="@color/cardview_dark_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/versionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/versionTitleValue"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:text="@string/version_value"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintBottom_toBottomOf="@+id/versionTitle"
        app:layout_constraintStart_toEndOf="@id/guidelineCenter"
        app:layout_constraintTop_toTopOf="@+id/versionTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:text="@string/author_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/versionTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorTitleValue"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:text="@string/author_value"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintBottom_toBottomOf="@+id/authorTitle"
        app:layout_constraintStart_toEndOf="@id/guidelineCenter"
        app:layout_constraintTop_toTopOf="@+id/authorTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:text="@string/contact_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/authorTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactTitleEmail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:text="@string/author_email"
        android:autoLink="email"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintBottom_toBottomOf="@+id/contactTitle"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toTopOf="@+id/contactTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>