<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="brickQuantity"
            type="com.application.afol.models.BrickResult.Result" />

        <variable
            name="brickColor"
            type="com.application.afol.models.BrickResult.Result.Color" />

        <variable
            name="brickDetail"
            type="com.application.afol.models.BrickResult.Result.Part" />

        <variable
            name="adapter"
            type="com.application.afol.ui.adapters.BindingAdapter" />
    </data>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_single_brick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background">

            <TextView
                android:id="@+id/sparePartsLabel"
                bindSparePart="@{brickQuantity.spare}"
                android:layout_width="110dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/spare_parts_label_background"
                android:drawableStart="@drawable/ic_label_black_24dp"
                android:gravity="center"
                android:paddingStart="@dimen/margin_4dp"
                android:text="@string/spare_part_label_text"
                android:textColor="@color/cardview_dark_background"
                android:textSize="@dimen/text_size_10sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                bindImagerRecycler="@{brickDetail.partImgUrl}"
                bindImgToUrl="@{brickDetail.partUrl}"
                android:layout_width="135dp"
                android:layout_height="115dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/brick_image_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/brick_num_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@{brickDetail.partNum}"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/brick_number_title" />

            <TextView
                android:id="@+id/brick_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/number_text"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_brick_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/name_set_card_view"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/quantity_title" />

            <TextView
                android:id="@+id/name_brick_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{brickDetail.name}"
                android:textAlignment="textEnd"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name_brick_title"
                app:layout_constraintTop_toTopOf="@+id/name_brick_title" />

            <TextView
                android:id="@+id/quantity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/quantity_title_text"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/brick_number_title" />

            <TextView
                android:id="@+id/quantity_value"
                bindIntToString="@{brickQuantity.quantity}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/quantity_title" />

            <TextView
                android:id="@+id/color_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/color_title_text"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/name_brick_value" />

            <TextView
                android:id="@+id/color_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@{brickColor.name}"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/color_title" />

            <Button
                android:id="@+id/bricklink_button"
                bindBrickLink="@{brickQuantity.elementID}"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:background="@drawable/spare_parts_label_background"
                android:text="@string/bricklink"
                android:textColor="@color/semi_burst_white"
                android:textSize="@dimen/text_size_12sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/color_title" />

            <Button
                android:id="@+id/rebrickable_button"
                bindButtonToUrl="@{brickDetail.partUrl}"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:background="@drawable/spare_parts_label_background"
                android:text="@string/rebrickable_button_text"
                android:textColor="@color/semi_burst_white"
                android:textSize="@dimen/text_size_12sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bricklink_button"
                app:layout_constraintTop_toBottomOf="@+id/color_title"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
</layout>