<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout">

    <data>

        <variable
            name="part"
            type="com.application.afol.models.PartResult.Result" />

        <variable
            name="adapter"
            type="com.application.afol.ui.adapters.BindingAdapter" />
    </data>

    <androidx.cardview.widget.CardView
        bindPartToUrl="@{part.partUrl}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_3dp"
        android:background="@color/cardview_dark_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_dark_background">

            <ImageView
                android:id="@+id/imageView"
                bindImagerRecycler="@{part.partImgUrl}"
                android:layout_width="135dp"
                android:layout_height="@dimen/party_single_image_height"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:contentDescription="@string/brick_image_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/brick_num_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:text="@{part.partNum}"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/brick_number_title" />

            <TextView
                android:id="@+id/brick_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="8dp"
                android:text="@string/number_text"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_brick_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/name_set_card_view"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toStartOf="@+id/brick_number_title"
                app:layout_constraintTop_toBottomOf="@+id/brick_number_title" />

            <TextView
                android:id="@+id/name_brick_value"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:ellipsize="end"
                android:isScrollContainer="true"
                android:scrollbars="vertical"
                android:text="@{part.name}"
                android:textAlignment="textStart"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name_brick_title"
                app:layout_constraintTop_toTopOf="@+id/name_brick_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>