<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="legoSet"
            type="com.application.afol.models.LegoSet" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_dark_background"
            tools:ignore="PrivateResource">

            <TextView
                android:id="@+id/textLabelAdd"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:background="@drawable/spare_parts_label_background"
                android:backgroundTint="@color/gray"
                android:drawableStart="@drawable/ic_add_black_24dp"
                android:drawablePadding="@dimen/margin_3dp"
                android:gravity="center"
                android:text="Label"
                app:layout_constraintBottom_toTopOf="@+id/lego_image_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelCompletable"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:background="@drawable/spare_parts_label_background"
                android:drawablePadding="@dimen/margin_3dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/lego_image_id"
                app:layout_constraintStart_toEndOf="@+id/textLabelAdd"
                app:layout_constraintTop_toTopOf="parent"
                tools:backgroundTint="@color/orange"
                tools:drawableStart="@drawable/ic_add_black_24dp"
                tools:text="Label" />

            <TextView
                android:id="@+id/labelAssembledable"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:background="@drawable/spare_parts_label_background"
                android:drawablePadding="@dimen/margin_3dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/lego_image_id"
                app:layout_constraintStart_toEndOf="@+id/labelCompletable"
                app:layout_constraintTop_toTopOf="parent"
                tools:drawableStart="@drawable/ic_add_black_24dp"
                tools:text="Label" />


            <TextView
                android:id="@+id/labelOwnerable"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:background="@drawable/spare_parts_label_background"
                android:drawablePadding="@dimen/margin_3dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/lego_image_id"
                app:layout_constraintStart_toEndOf="@+id/labelAssembledable"
                app:layout_constraintTop_toTopOf="parent"
                tools:drawableStart="@drawable/ic_add_black_24dp"
                tools:text="Label" />

            <ImageView
                android:id="@+id/lego_image_id"
                style="@style/MaterialAnimations"
                bindImagerRecycler="@{legoSet.set_img_url}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/lego_image_desc"
                android:padding="@dimen/margin_3dp"
                android:transitionName="@string/lego_image_transition"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLabelAdd" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:layout_marginEnd="@dimen/margin_4dp"
                android:background="@drawable/ic_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/favorite_single_guideline" />

            <TextView
                android:id="@+id/number_set_name_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_48dp"
                android:text="@string/number_text"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_set_text_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/name_set_card_view"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/number_set_name_text_id" />

            <TextView
                android:id="@+id/release_date_text_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/release_year_card_view_text"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/name_set_text_value_id" />

            <TextView
                android:id="@+id/number_parts_text_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/pieces_cardView_title"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/release_date_text_name_id" />

            <TextView
                android:id="@+id/number_set_value_text_id"
                bindShortNumber="@{legoSet.set_num}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:textColor="#A6FFFFFF"
                android:textIsSelectable="true"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/number_set_name_text_id" />

            <TextView
                android:id="@+id/name_set_text_value_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@{legoSet.name}"
                android:textAlignment="textEnd"
                android:textColor="#A6FFFFFF"
                android:textIsSelectable="true"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name_set_text_name_id"
                app:layout_constraintTop_toTopOf="@+id/name_set_text_name_id" />

            <TextView
                android:id="@+id/release_date_text_value_id"
                bindIntToString="@{legoSet.year}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:textColor="#A6FFFFFF"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/release_date_text_name_id" />

            <TextView
                android:id="@+id/number_parts_text_value_id"
                bindIntToString="@{legoSet.num_parts}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:textColor="#A6FFFFFF"
                android:textIsSelectable="true"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/number_parts_text_name_id" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
